all major misalignments fixed

--- a/_include/css/responsive.css
+++ b/_include/css/responsive.css
@@ -389,11 +389,7 @@
 
 /* Retina Display */
 
-@media only screen and (-webkit-min-device-pixel-ratio: 2),
- 	only screen and (-moz-min-device-pixel-ratio: 2),
-  	only screen and (-o-min-device-pixel-ratio: 2/1),
-  	only screen and (min-device-pixel-ratio: 2),
-  	only screen and (min-resolution: 2dppx) {
+
 		
 		header #logo a {
 			background-image: url(../img/logo1.png);
